# ydlidar_sdk

./: CMakeLists.txt  ChannelDevice.h  README.md  Utils.h  config.h.in
Lidar/: CMakeLists.txt  DeviceException.h  LIDARDevice.h  LIDARDriverInterface.h
Lidar/Drivers/: CMakeLists.txt
Lidar/Drivers/YDLidar/: CMakeLists.txt  thread.h  timer.h  unix_timer.cpp  win_timer.cpp  ydlidar_driver.cpp  ydlidar_driver.h
Samples/: CMakeLists.txt  lidar.ini  test.cpp  test1.cpp
Serial/: CMakeLists.txt  common.h  lock.c  lock.h  serial.cpp  serial.h
Serial/impl/unix/: unix.h  unix_serial.cpp  unix_serial.h
Serial/impl/windows/: win.h  win_serial.h
Sockets/: ActiveSocket.cpp  ActiveSocket.h  CMakeLists.txt  Host.h  PassiveSocket.cpp  PassiveSocket.h  SimpleSocket.cpp  SimpleSocket.h  StatTimer.h
simpleini/: CMakeLists.txt  SimpleIni.h
startup/: initenv.sh
